# kotlin-js-bazel-example

./: .gitignore  BUILD.bazel  HelloWorld.kt  README.md  WORKSPACE  bootstrap.js  package-lock.json  package.json  rules_kotlin_pr201.patch
